2008-11-17  Stefan Kost  <ensonic@users.sf.net>

	* libs/gst/controller/gstcontroller.c:
	* libs/gst/controller/gstcontrollerprivate.h:
	  Keep last-value and only call set_property if value has changed. This
	  supresses all the g_object_notifies we would trigger otherwise. It
	  also allows the user to chage the value while there is no controller
	  change.

2008-11-17  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstvalue.c:
	  Don't crash if either of the string GValues is empty.

2008-11-17  Andy Wingo  <wingo@pobox.com>

	* tools/gst-inspect.c (print_all_uri_handlers): New function,
	prints a summary of what URI schemes are supported by what
	elements.
	(main): Plumb in support for --uri-handlers or -u, and fix the
	argc check for -a and -u.

2008-11-17  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/gstutils.h:
	Add G_GNUC_PURE to gst_util_uint64_scale* and the double<->uint64
	conversion functions.

2008-11-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstbuffer.c: (gst_buffer_finalize):
	Avoid costly typechecking for trivially correct pointers.

	* gst/gstpoll.c: (gst_poll_wait):
	Add some G_LIKELY here and there.

	* libs/gst/base/gstadapter.c: (gst_adapter_push):
	Add some debug info.

2008-11-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/random/wtay/poll-timeout:
	Small tweaks.

2008-11-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/old/testsuite/caps/intersection.c: (main):
	* tests/old/testsuite/plugin/loading.c: (main):
	Remove references to deprecated API g_mem_chunk*.
	Fixes #560442.

2008-11-12  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tools/gst-inspect.c: (main):
	Add --plugin option. Fixes #560301.

2008-11-12  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/random/wtay/poll-timeout:
	Quick braindump for a possible (not totally verified) atomic case.

2008-11-12  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/gstregistrybinary.c: (gst_registry_binary_write_chunk),